kubernetes/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
spec:
  selector:
    app.kubernetes.io/name: homarr
  ports:
    - port: 7575
      protocol: TCP
      targetPort: 7575
