kubernetes/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: homarr.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr-service
            port:
              number: 7575
